Background colors added and some padding to content items

--- a/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
+++ b/source/_patterns/04-pages/04-hankesivu-read-mode.mustache
@@ -39,10 +39,9 @@
               </a>
             </div>
           </div>
-          <div class="content-item medium invitation">
+          <div class="content-item large invitation">
             <h3>
-              <img src="../../images/favicon_32x32.jpg" />
-              Kutsu muita osallistumaan
+              <img src="../../images/favicon_32x32.jpg" />Kutsu muita osallistumaan
             </h3>
             <div class="helper-container">
               <span class="icon-help" title="lisää käyttäjänimiä tai sähköpostiosoitteita" placement="top">Kenelle</span>
@@ -298,7 +297,7 @@
               </tbody>
             </table>
           </div>
-          <div class="content-item medium keywords">
+          <div class="content-item large keywords">
             <div class="helper-container">
               <span class="icon-help h4" title="Lorem ipsum" placement="top">Asiasanat</span>
               <p class="helper-text small is-vishidden">Lorem ipsum</p>
@@ -311,7 +310,7 @@
               <li>Esimerkki</li>
             </ul>
           </div>
-          <div class="content-item medium locations">
+          <div class="content-item large locations">
             <div class="helper-container">
               <span class="icon-help h4" title="Lorem ipsum" placement="top">Paikkakunnat</span>
               <p class="helper-text small is-vishidden">Lorem ipsum</p>
@@ -323,7 +322,7 @@
               <li>Tampere</li>
             </ul>
           </div>
-          <div class="content-item medium project-analysis">
+          <div class="content-item large project-analysis">
             <h2>
               Yhteenveto
             </h2>
