--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
@@ -39,10 +39,9 @@
               &lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class=&quot;content-item medium invitation&quot;&gt;
+          &lt;div class=&quot;content-item large invitation&quot;&gt;
             &lt;h3&gt;
-              &lt;img src=&quot;../../images/favicon_32x32.jpg&quot; /&gt;
-              Kutsu muita osallistumaan
+              &lt;img src=&quot;../../images/favicon_32x32.jpg&quot; /&gt;Kutsu muita osallistumaan
             &lt;/h3&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
               &lt;span class=&quot;icon-help&quot; title=&quot;lis&Atilde;&curren;&Atilde;&curren; k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;nimi&Atilde;&curren; tai s&Atilde;&curren;hk&Atilde;&para;postiosoitteita&quot; placement=&quot;top&quot;&gt;Kenelle&lt;/span&gt;
@@ -298,7 +297,7 @@
               &lt;/tbody&gt;
             &lt;/table&gt;
           &lt;/div&gt;
-          &lt;div class=&quot;content-item medium keywords&quot;&gt;
+          &lt;div class=&quot;content-item large keywords&quot;&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
               &lt;span class=&quot;icon-help h4&quot; title=&quot;Lorem ipsum&quot; placement=&quot;top&quot;&gt;Asiasanat&lt;/span&gt;
               &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;Lorem ipsum&lt;/p&gt;
@@ -311,7 +310,7 @@
               &lt;li&gt;Esimerkki&lt;/li&gt;
             &lt;/ul&gt;
           &lt;/div&gt;
-          &lt;div class=&quot;content-item medium locations&quot;&gt;
+          &lt;div class=&quot;content-item large locations&quot;&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
               &lt;span class=&quot;icon-help h4&quot; title=&quot;Lorem ipsum&quot; placement=&quot;top&quot;&gt;Paikkakunnat&lt;/span&gt;
               &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;Lorem ipsum&lt;/p&gt;
@@ -323,7 +322,7 @@
               &lt;li&gt;Tampere&lt;/li&gt;
             &lt;/ul&gt;
           &lt;/div&gt;
-          &lt;div class=&quot;content-item medium project-analysis&quot;&gt;
+          &lt;div class=&quot;content-item large project-analysis&quot;&gt;
             &lt;h2&gt;
               Yhteenveto
             &lt;/h2&gt;
