--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -3,7 +3,9 @@
 	margin-bottom: $space-half;
 }
 .content-item {
-	background-color: #fff;
+	background-color: $white;
+	margin: 0.5em 0.5em;
+	padding: 0.3em 0.3em;
 }
 	
 /* Fixed sizes */
