css extended, homepage, hankelist, content-landing page styles fixed

--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -5,11 +5,11 @@
       {{> molecules-carousel }}
       <section class="l-two-col">
         <section class="l-main">
-          <div>
+          <div id="pnlFollowedProjects" class="content-item large">
             <h3 class="section-title">
               Seuraamani kohteet
             </h3>
-            <div id="pnlFollowedProjects" class="list-lift">
+            <div class="list-lift">
               <div class="content-list">
                 <ul>
                   <li class="single-list-item">
@@ -91,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div id="pnlInterestingProjects">
+          <div id="pnlInterestingProjects" class="content-item large">
             <h3 class="section-title">
               Kiinnostavia hankkeita
             </h3>
@@ -127,7 +127,7 @@
           </div>
         </section>
         <aside class="l-sidebar">
-          <section id="ProjectSearch">
+          <section id="ProjectSearch" class="content-item">
             <h3 class="section-title">
               Etsi hankkeita joihin voit osallistua
             </h3>
@@ -152,7 +152,7 @@
               </div>
             </div>
           </section>
-          <section id="ExternalRss">
+          <section id="ExternalRss" class="content-item">
             <div class="semantic-list">
               <h3 class="section-title">
                 Ajankohtaista
