--- a/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
+++ b/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
@@ -10,29 +10,29 @@
       <img src="../../images/fpo_avatar.png" alt="Logo" />
       <input class="btn btn-otk" type="submit" value="Vaihda logo" />
     </div>
-    <div id="hanke-title" class="form-element text-el">
+    <div id="hanke-title" class="form-element text-el content-item">
       <label for="text-field">Otsikko tai nimi*</label>
       <textarea class="ta-small js-dynamic" placeholder="Kirjoita tähän otsikko tai nimi..." maxlength="130"></textarea>
     </div>
-    <div id="hanke-intro" class="form-element text-el">
+    <div id="hanke-intro" class="form-element text-el content-item">
       <div class="helper-container">
         <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Esittely*</span>
         <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
       <textarea class="js-dynamic" placeholder="Kirjoita tähän esittely..." maxlength="400"></textarea>
     </div>
-    <div id="hanke-description" class="form-element text-el">
+    <div id="hanke-description" class="form-element text-el content-item">
       <div class="helper-container">
         <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Kuvaus ja tavoitteet*</span>
         <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
       <textarea class="ta-small js-dynamic" placeholder="Kirjoita tähän kuvaus ja tavoitteet..." maxlength="2000"></textarea>
     </div>
-    <div id="hanke-responsibility" class="form-element text-el">
+    <div id="hanke-responsibility" class="form-element text-el content-item">
       <label for="text-field">Vastuujärjestö tai -henkilö*</label>
       <textarea class="ta-small js-dynamic"  placeholder="Kirjoita tähän vastuujärjestö tai -henkilö..." maxlength="130"></textarea>
     </div>
-    <div id="hanke-publicity">
+    <div id="hanke-publicity" class="content-item">
       <div class="helper-container">
         <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Hankkeen näkyvyys*</span>
         <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
@@ -46,7 +46,7 @@
         </span>
       </span>
     </div>
-    <div id="hanke-publish">
+    <div id="hanke-publish" class="content-item">
       <div class="helper-container">
         <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Hankkeen julkaisun tila*</span>
         <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
@@ -77,7 +77,7 @@
           </span>
         </span>
       </div>-->
-    <div id="hanke-date">
+    <div id="hanke-date" class="content-item medium">
       <div class="helper-container">
         <h3 class="icon-help" title="Example tip text." placement="top">Hankkeen aikataulu*</h3>
         <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
@@ -105,7 +105,7 @@
     </div>
     <!-- Optional field those will be fadeout -->
     <div class="fadeout">
-      <div id="hanke-attachments">
+      <div id="hanke-attachments" class="content-item">
         <h3>Liitteet</h3>
         <div id="hanke-add-attachment">
           <form action="" class="attachment-form">
@@ -149,7 +149,7 @@
           </div>
         </div>
       </div>
-      <div id="hanke-links">
+      <div id="hanke-links" class="content-item">
         <h3>Linkit</h3>
         <div class="hanke-link-list">
           <div class="hanke-link-item">
@@ -179,19 +179,19 @@
         </div>
         <input class="btn btn-otk" type="submit" value="Lisää linkki" />
       </div>
-      <div id="hanke-locations">
+      <div id="hanke-locations" class="content-item">
         <h3>Paikkakunnat</h3>
         <ul id="tbLocations" class="location-list"></ul>
       </div>
-      <div id="hanke-keywords">
+      <div id="hanke-keywords" class="content-item">
         <h3>Asiasanat</h3>
         <ul id="tbKeywords" class="tagit-list"></ul>
       </div>
-      <div id="hanke-admins">
+      <div id="hanke-admins" class="content-item">
         <h3>Vastuuhenkilöt</h3>
         <ul id="tbAdmins" class="person-list"></ul>
       </div>
-      <div id="hanke-supervisors">
+      <div id="hanke-supervisors" class="content-item">
         <h3>Ohjaajat</h3>
         <ul id="tbSupervisors" class="person-list"></ul>
       </div>
@@ -199,7 +199,7 @@
         <a href="#">Näytä valinnaiset lisätiedot</a>
       </p>
     </div>
-    <div id="hanke-save">
+    <div id="hanke-save" class="content-item">
       <input type="checkbox">
         Olen tutustunut <a href="#">palvelun sääntöihin</a> ja vakuutan annettujen tietojen olevan todenmukaisia*
       </input>
