--- a/source/_patterns/04-pages/05-hankelist-page.mustache
+++ b/source/_patterns/04-pages/05-hankelist-page.mustache
@@ -1,116 +1,118 @@
 <div class="page hankelist-page" id="page">
   {{> organisms-header }}
   <div role="main">
-    <span class="float-right">
-      <a href="#">Hankkeiden RSS</a>
-      <img src="../../images/favicon_16x16.jpg" alt="RSS"/>
-    </span>
-    <h1>
-      Hankkeet
-    </h1>    
-    <div class="helptext">
-      <p>{{description}}</p>
-    </div>
-    <div class="list-lift">
-      <div class="navigation">
-        <div class="btn-group enlarged">
-          <a href="#" class="active">
-            Vaikuta<span class="count">42</span>
-          </a>
-          <a href="#">Muiden suosimat</a>
-          <a href="#">Vielä ehdit</a>
-          <a href="#">Omat valinnat</a>
-          <a href="#">
-            Tulokset<span class="count">172</span>
-          </a>
-        </div>
-        <div class="tag-search-container">
-          {{> atoms-tagit }}
-        </div>
+    <div class="content-item large">
+      <span class="float-right">
+        <a href="#">Hankkeiden RSS</a>
+        <img src="../../images/favicon_16x16.jpg" alt="RSS"/>
+      </span>
+      <h1>
+        Hankkeet
+      </h1>
+      <div class="helptext">
+        <p>{{description}}</p>
       </div>
-      <div class="content-list">
-        <ul>
-          <li class="single-list-item">
-            <ul class="items-container">
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-count-icon }}
-              </li>
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-tag-list }}
-              </li>
-            </ul>
-          </li>
-          <li class="single-list-item">
-            <ul class="items-container">
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-count-icon }}
-              </li>
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-tag-list }}
-              </li>
-            </ul>
-          </li>
-          <li class="single-list-item">
-            <ul class="items-container">
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-count-icon }}
-              </li>
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-tag-list }}
-              </li>
-            </ul>
-          </li>
-          <li class="single-list-item">
-            <ul class="items-container">
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-count-icon }}
-              </li>
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-tag-list }}
-              </li>
-            </ul>
-          </li>
-          <li class="single-list-item">
-            <ul class="items-container">
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-count-icon }}
-              </li>
-              <li class="block-item">
-                {{> atoms-link-and-description }}
-              </li>
-              <li class="block-item">
-                {{> atoms-tag-list }}
-              </li>
-            </ul>
-          </li>
-        </ul>
+      <div class="list-lift">
+        <div class="navigation">
+          <div class="btn-group enlarged">
+            <a href="#" class="active">
+              Vaikuta<span class="count">42</span>
+            </a>
+            <a href="#">Muiden suosimat</a>
+            <a href="#">Vielä ehdit</a>
+            <a href="#">Omat valinnat</a>
+            <a href="#">
+              Tulokset<span class="count">172</span>
+            </a>
+          </div>
+          <div class="tag-search-container">
+            {{> atoms-tagit }}
+          </div>
+        </div>
+        <div class="content-list">
+          <ul>
+            <li class="single-list-item">
+              <ul class="items-container">
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-count-icon }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-tag-list }}
+                </li>
+              </ul>
+            </li>
+            <li class="single-list-item">
+              <ul class="items-container">
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-count-icon }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-tag-list }}
+                </li>
+              </ul>
+            </li>
+            <li class="single-list-item">
+              <ul class="items-container">
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-count-icon }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-tag-list }}
+                </li>
+              </ul>
+            </li>
+            <li class="single-list-item">
+              <ul class="items-container">
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-count-icon }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-tag-list }}
+                </li>
+              </ul>
+            </li>
+            <li class="single-list-item">
+              <ul class="items-container">
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-count-icon }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-link-and-description }}
+                </li>
+                <li class="block-item">
+                  {{> atoms-tag-list }}
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div><!--End role=main-->
