--- a/public/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
+++ b/public/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
@@ -5,11 +5,11 @@
       {{&gt; molecules-carousel }}
       &lt;section class=&quot;l-two-col&quot;&gt;
         &lt;section class=&quot;l-main&quot;&gt;
-          &lt;div&gt;
+          &lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;content-item large&quot;&gt;
             &lt;h3 class=&quot;section-title&quot;&gt;
               Seuraamani kohteet
             &lt;/h3&gt;
-            &lt;div id=&quot;pnlFollowedProjects&quot; class=&quot;list-lift&quot;&gt;
+            &lt;div class=&quot;list-lift&quot;&gt;
               &lt;div class=&quot;content-list&quot;&gt;
                 &lt;ul&gt;
                   &lt;li class=&quot;single-list-item&quot;&gt;
@@ -91,7 +91,7 @@
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-          &lt;div id=&quot;pnlInterestingProjects&quot;&gt;
+          &lt;div id=&quot;pnlInterestingProjects&quot; class=&quot;content-item large&quot;&gt;
             &lt;h3 class=&quot;section-title&quot;&gt;
               Kiinnostavia hankkeita
             &lt;/h3&gt;
@@ -127,7 +127,7 @@
           &lt;/div&gt;
         &lt;/section&gt;
         &lt;aside class=&quot;l-sidebar&quot;&gt;
-          &lt;section id=&quot;ProjectSearch&quot;&gt;
+          &lt;section id=&quot;ProjectSearch&quot; class=&quot;content-item&quot;&gt;
             &lt;h3 class=&quot;section-title&quot;&gt;
               Etsi hankkeita joihin voit osallistua
             &lt;/h3&gt;
@@ -152,7 +152,7 @@
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/section&gt;
-          &lt;section id=&quot;ExternalRss&quot;&gt;
+          &lt;section id=&quot;ExternalRss&quot; class=&quot;content-item&quot;&gt;
             &lt;div class=&quot;semantic-list&quot;&gt;
               &lt;h3 class=&quot;section-title&quot;&gt;
                 Ajankohtaista
