--- a/public/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
+++ b/public/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.mustache
@@ -10,29 +10,29 @@
       &lt;img src=&quot;../../images/fpo_avatar.png&quot; alt=&quot;Logo&quot; /&gt;
       &lt;input class=&quot;btn btn-otk&quot; type=&quot;submit&quot; value=&quot;Vaihda logo&quot; /&gt;
     &lt;/div&gt;
-    &lt;div id=&quot;hanke-title&quot; class=&quot;form-element text-el&quot;&gt;
+    &lt;div id=&quot;hanke-title&quot; class=&quot;form-element text-el content-item&quot;&gt;
       &lt;label for=&quot;text-field&quot;&gt;Otsikko tai nimi*&lt;/label&gt;
       &lt;textarea class=&quot;ta-small js-dynamic&quot; placeholder=&quot;Kirjoita t&Atilde;&curren;h&Atilde;&curren;n otsikko tai nimi...&quot; maxlength=&quot;130&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
-    &lt;div id=&quot;hanke-intro&quot; class=&quot;form-element text-el&quot;&gt;
+    &lt;div id=&quot;hanke-intro&quot; class=&quot;form-element text-el content-item&quot;&gt;
       &lt;div class=&quot;helper-container&quot;&gt;
         &lt;span class=&quot;icon-help&quot; title=&quot;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&quot; placement=&quot;top&quot;&gt;Esittely*&lt;/span&gt;
         &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&lt;/p&gt;
       &lt;/div&gt;
       &lt;textarea class=&quot;js-dynamic&quot; placeholder=&quot;Kirjoita t&Atilde;&curren;h&Atilde;&curren;n esittely...&quot; maxlength=&quot;400&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
-    &lt;div id=&quot;hanke-description&quot; class=&quot;form-element text-el&quot;&gt;
+    &lt;div id=&quot;hanke-description&quot; class=&quot;form-element text-el content-item&quot;&gt;
       &lt;div class=&quot;helper-container&quot;&gt;
         &lt;span class=&quot;icon-help&quot; title=&quot;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&quot; placement=&quot;top&quot;&gt;Kuvaus ja tavoitteet*&lt;/span&gt;
         &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&lt;/p&gt;
       &lt;/div&gt;
       &lt;textarea class=&quot;ta-small js-dynamic&quot; placeholder=&quot;Kirjoita t&Atilde;&curren;h&Atilde;&curren;n kuvaus ja tavoitteet...&quot; maxlength=&quot;2000&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
-    &lt;div id=&quot;hanke-responsibility&quot; class=&quot;form-element text-el&quot;&gt;
+    &lt;div id=&quot;hanke-responsibility&quot; class=&quot;form-element text-el content-item&quot;&gt;
       &lt;label for=&quot;text-field&quot;&gt;Vastuuj&Atilde;&curren;rjest&Atilde;&para; tai -henkil&Atilde;&para;*&lt;/label&gt;
       &lt;textarea class=&quot;ta-small js-dynamic&quot;  placeholder=&quot;Kirjoita t&Atilde;&curren;h&Atilde;&curren;n vastuuj&Atilde;&curren;rjest&Atilde;&para; tai -henkil&Atilde;&para;...&quot; maxlength=&quot;130&quot;&gt;&lt;/textarea&gt;
     &lt;/div&gt;
-    &lt;div id=&quot;hanke-publicity&quot;&gt;
+    &lt;div id=&quot;hanke-publicity&quot; class=&quot;content-item&quot;&gt;
       &lt;div class=&quot;helper-container&quot;&gt;
         &lt;span class=&quot;icon-help&quot; title=&quot;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&quot; placement=&quot;top&quot;&gt;Hankkeen n&Atilde;&curren;kyvyys*&lt;/span&gt;
         &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&lt;/p&gt;
@@ -46,7 +46,7 @@
         &lt;/span&gt;
       &lt;/span&gt;
     &lt;/div&gt;
-    &lt;div id=&quot;hanke-publish&quot;&gt;
+    &lt;div id=&quot;hanke-publish&quot; class=&quot;content-item&quot;&gt;
       &lt;div class=&quot;helper-container&quot;&gt;
         &lt;span class=&quot;icon-help&quot; title=&quot;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&quot; placement=&quot;top&quot;&gt;Hankkeen julkaisun tila*&lt;/span&gt;
         &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&lt;/p&gt;
@@ -77,7 +77,7 @@
           &lt;/span&gt;
         &lt;/span&gt;
       &lt;/div&gt;--&gt;
-    &lt;div id=&quot;hanke-date&quot;&gt;
+    &lt;div id=&quot;hanke-date&quot; class=&quot;content-item medium&quot;&gt;
       &lt;div class=&quot;helper-container&quot;&gt;
         &lt;h3 class=&quot;icon-help&quot; title=&quot;Example tip text.&quot; placement=&quot;top&quot;&gt;Hankkeen aikataulu*&lt;/h3&gt;
         &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; aputeksti. Aputeksti auttaa suuresti k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;&Atilde;&curren;.&lt;/p&gt;
@@ -105,7 +105,7 @@
     &lt;/div&gt;
     &lt;!-- Optional field those will be fadeout --&gt;
     &lt;div class=&quot;fadeout&quot;&gt;
-      &lt;div id=&quot;hanke-attachments&quot;&gt;
+      &lt;div id=&quot;hanke-attachments&quot; class=&quot;content-item&quot;&gt;
         &lt;h3&gt;Liitteet&lt;/h3&gt;
         &lt;div id=&quot;hanke-add-attachment&quot;&gt;
           &lt;form action=&quot;&quot; class=&quot;attachment-form&quot;&gt;
@@ -149,7 +149,7 @@
           &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;hanke-links&quot;&gt;
+      &lt;div id=&quot;hanke-links&quot; class=&quot;content-item&quot;&gt;
         &lt;h3&gt;Linkit&lt;/h3&gt;
         &lt;div class=&quot;hanke-link-list&quot;&gt;
           &lt;div class=&quot;hanke-link-item&quot;&gt;
@@ -179,19 +179,19 @@
         &lt;/div&gt;
         &lt;input class=&quot;btn btn-otk&quot; type=&quot;submit&quot; value=&quot;Lis&Atilde;&curren;&Atilde;&curren; linkki&quot; /&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;hanke-locations&quot;&gt;
+      &lt;div id=&quot;hanke-locations&quot; class=&quot;content-item&quot;&gt;
         &lt;h3&gt;Paikkakunnat&lt;/h3&gt;
         &lt;ul id=&quot;tbLocations&quot; class=&quot;location-list&quot;&gt;&lt;/ul&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;hanke-keywords&quot;&gt;
+      &lt;div id=&quot;hanke-keywords&quot; class=&quot;content-item&quot;&gt;
         &lt;h3&gt;Asiasanat&lt;/h3&gt;
         &lt;ul id=&quot;tbKeywords&quot; class=&quot;tagit-list&quot;&gt;&lt;/ul&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;hanke-admins&quot;&gt;
+      &lt;div id=&quot;hanke-admins&quot; class=&quot;content-item&quot;&gt;
         &lt;h3&gt;Vastuuhenkil&Atilde;&para;t&lt;/h3&gt;
         &lt;ul id=&quot;tbAdmins&quot; class=&quot;person-list&quot;&gt;&lt;/ul&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;hanke-supervisors&quot;&gt;
+      &lt;div id=&quot;hanke-supervisors&quot; class=&quot;content-item&quot;&gt;
         &lt;h3&gt;Ohjaajat&lt;/h3&gt;
         &lt;ul id=&quot;tbSupervisors&quot; class=&quot;person-list&quot;&gt;&lt;/ul&gt;
       &lt;/div&gt;
@@ -199,7 +199,7 @@
         &lt;a href=&quot;#&quot;&gt;N&Atilde;&curren;yt&Atilde;&curren; valinnaiset lis&Atilde;&curren;tiedot&lt;/a&gt;
       &lt;/p&gt;
     &lt;/div&gt;
-    &lt;div id=&quot;hanke-save&quot;&gt;
+    &lt;div id=&quot;hanke-save&quot; class=&quot;content-item&quot;&gt;
       &lt;input type=&quot;checkbox&quot;&gt;
         Olen tutustunut &lt;a href=&quot;#&quot;&gt;palvelun s&Atilde;&curren;&Atilde;&curren;nt&Atilde;&para;ihin&lt;/a&gt; ja vakuutan annettujen tietojen olevan todenmukaisia*
       &lt;/input&gt;
